--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,2 +1,181 @@
+/* cambios en index*/
+.bodyprincipal {
+  background-color: black;
+}
+
+nav {
+  font-style: italic;
+  font-size: 35px;
+  margin: 0px;
+}
+nav ul {
+  list-style: none;
+  text-align: end;
+}
+nav ul li {
+  display: inline;
+}
+nav ul li a {
+  text-decoration: none;
+  color: aqua;
+}
+
+.footer-i {
+  margin-top: 45vh;
+  color: aquamarine;
+}
+
+.w-topachita {
+  font-size: 100px;
+  color: rgb(86, 11, 224);
+  text-align: center;
+  padding-top: 250px;
+}
+
+.offcanvas-header {
+  background-color: black;
+}
+
+.offcanvas {
+  background-color: grey;
+  box-shadow: 0pc 7px 5px white;
+}
+
+.btn-close {
+  font-size: 35px;
+  color: red;
+}
+
+.btn-close:hover {
+  color: white;
+}
+
+.offcanvas-title {
+  color: white;
+  box-shadow: 0px 4px 10px rgb(220, 22, 247);
+}
+
+/*cambios productos*/
+.nuestrosproductos {
+  font-size: 60px;
+  text-align: center;
+  background-color: rgb(7, 228, 62);
+}
+
+.calzado2 {
+  font-size: 35px;
+}
+
+/*cambios en contacto*/
+input {
+  display: flex;
+  text-align: start;
+}
+
+.img {
+  width: 100%;
+  height: 500px;
+}
+
+.redes {
+  height: 150px;
+  width: 150px;
+  display: flex;
+  display: inline;
+  padding: 120px;
+  margin-bottom: -75px;
+  margin-top: -75px;
+  margin-left: 50px;
+}
+
+.contacto1 {
+  width: 100%;
+}
+
+.contactanos {
+  text-align: center;
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.datos {
+  display: flex;
+  width: 200px;
+  height: 20px;
+}
+
+.copycontacto {
+  text-align: start;
+}
+
+textarea {
+  width: 350px;
+  height: 150px;
+  border-radius: 15px;
+  border-style: ridge;
+  border-color: blueviolet;
+  padding: 15px;
+  margin: 7px;
+  border-style: solid;
+  display: flex;
+}
+
+/*cambios nosotros*/
+.titulo2 {
+  font-size: 100px;
+  text-align: center;
+  background-color: aquamari;
+  font-style: normal;
+}
+
+.info {
+  font-size: 35px;
+}
+
+.subtitulo2 {
+  font-size: 50px;
+  text-align: center;
+}
+
+.text4 {
+  text-align: end;
+  margin: -35px;
+}
+
+.text5 {
+  text-align: center;
+  margin: 100px;
+}
+
+/* cambios faqs*/
+.preguntas {
+  font-size: 100px;
+  text-align: center;
+  background-color: orange;
+}
+
+.p {
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.p2 {
+  font-size: 35px;
+  font-weight: bolder;
+  margin-left: 300px;
+  margin-right: 300px;
+  margin: top;
+}
+
+.copyfaq {
+  display: flex;
+  text-align: start;
+}
+
+.preguntas2 {
+  width: 50%;
+  height: 30px;
+  display: flex;
+}
 
 /*# sourceMappingURL=estilos.css.map */
