--- a/css/estilos.css
+++ b/css/estilos.css
@@ -23,7 +23,7 @@ nav ul li a {
 
 .footer-i {
   margin-top: 45vh;
-  color: aquamarine;
+  color: rgb(98, 10, 214);
 }
 
 .w-topachita {
@@ -33,23 +33,20 @@ nav ul li a {
   padding-top: 250px;
 }
 
+.navbar-toggler {
+  color: plum;
+}
+
+.navbar-toggler:hover {
+  color: rebeccapurple;
+}
+
 .offcanvas-header {
   background-color: rgb(64, 174, 238);
-  font-size: 35px;
 }
 
 .offcanvas {
   background: linear-gradient(to top, #e053ce, #9930ee);
-  box-shadow: 0pc 7px 5px white;
-}
-
-.btn-x {
-  font-size: 35px;
-  color: red;
-}
-
-.btn-x:hover {
-  color: white;
 }
 
 .offcanvas-title {
@@ -58,13 +55,18 @@ nav ul li a {
   font-weight: bold;
 }
 
+.container-fluid {
+  background-color: rgba(255, 253, 251, 0.507);
+}
+
 .pro-c {
   font-size: 35px;
   font-weight: bold;
+  color: rgb(105, 6, 197);
 }
 
 .pro-c:hover {
-  color: red;
+  color: rgb(194, 5, 169);
 }
 
 /*cambios productos*/
