--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -27,42 +27,44 @@ nav{
 }
 .footer-i{
     margin-top: 45vh;
-    color: aquamarine;
+    color: rgb(98, 10, 214);
 }
-
-    .w-topachita{
+.w-topachita{
         font-size: 100px;
         color: rgb(86, 11, 224);
         text-align: $text-aling;
         padding-top: 250px;
     }
+.navbar-toggler{
+    color: plum;
+}
+.navbar-toggler:hover{
+    color: rebeccapurple;
+}
 
 .offcanvas-header{
     background-color: rgb(64, 174, 238);
-    font-size: $font-size;
 }
 .offcanvas{
     background: linear-gradient(to top, #e053ce, #9930ee); 
-    box-shadow: 0pc 7px 5px white;
-}
-.btn-x{
-    font-size: $font-size;
-    color: red;
-}
-.btn-x:hover{
-    color: white;
+    
 }
 .offcanvas-title{
     color: white;
     box-shadow: 0px 4px 10px rgb(220, 22, 247);
     font-weight: $font-weigth;
 }
+.container-fluid{
+    background-color: rgba(255, 253, 251, 0.507);
+
+}
 .pro-c{
     font-size: $font-size;
     font-weight: $font-weigth;
+    color: rgb(105, 6, 197);
 }
 .pro-c:hover{
-    color: red;
+    color: rgb(194, 5, 169);
 }
 /*cambios productos*/
 .nuestrosproductos{
@@ -74,6 +76,7 @@ nav{
     font-size: $font-size;
 }
 /*cambios en contacto*/
+
 input{
     display: flex;
     text-align: start;
