--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,285 +1,237 @@
 /* cambios en index*/
 $font-size: 35px;
-$text-aling:center;
+$text-aling: center;
 $font-weigth: bold;
-
-
-.bodyprincipal{
-    background: linear-gradient(to top, #dbd8d8, #9b077b);     
+@mixin img($ancho, $alto, $espacio) {
+  width: $ancho;
+  height: $alto;
+  gap: $espacio;
 }
-nav{ 
-    font-style: italic;
-    font-size: $font-size;
-    margin: 0px;
-    ul{
-        list-style: none;
-        text-align: end;
-        li{
-            a{
-                text-decoration: none;
-                color: rgb(7, 7, 7);
-                font-weight: bold;
-            }
-            display: inline;
-        }
+@mixin enlaces{
+    a{
+     text-decoration: none;
+     position: sticky;
+     color: #9930ee;
+     border:#083233 solid;
+     border-radius: 15px;
+     transition: all 2s ease-in-out;
+     &:hover{
+  color: #58ebf0;
     }
-    
+  }
 }
-.footer-i{
-    margin-top: 45vh;
-    color: rgb(98, 10, 214);
+
+.bodyprincipal {
+  background: linear-gradient(to top, #dbd8d8, #9b077b);
 }
-.w-topachita{
-        font-size: 100px;
-        color: rgb(86, 11, 224);
-        text-align: $text-aling;
-        padding-top: 250px;
+.navbar {
+  font-style: italic;
+  font-size: $font-size;
+  margin: 0px;
+  ul {
+    list-style: none;
+    text-align: end;
+    li {
+      a {
+        text-decoration: none;
+        color: rgb(7, 7, 7);
+        font-weight: bold;
+      }
+      display: inline;
     }
-.navbar-toggler{
-    color: plum;
+  }
 }
-.navbar-toggler:hover{
+.footer-i {
+  margin-top: 45vh;
+  color: rgb(98, 10, 214);
+}
+.w-topachita {
+  font-size: 100px;
+  color: rgb(86, 11, 224);
+  text-align: $text-aling;
+  padding-top: 250px;
+}
+.navbar-toggler {
+  color: plum;
+  &:hover{
     color: rebeccapurple;
+  }
 }
 
-.offcanvas-header{
-    background-color: rgb(64, 174, 238);
+.offcanvas-header {
+  background-color: rgb(64, 174, 238);
 }
-.offcanvas{
-    background: linear-gradient(to top, #e053ce, #9930ee); 
-    
+.offcanvas {
+  background: linear-gradient(to top, #e053ce, #9930ee);
 }
-.offcanvas-title{
-    color: white;
-    box-shadow: 0px 4px 10px rgb(220, 22, 247);
-    font-weight: $font-weigth;
+.offcanvas-title {
+  color: white;
+  box-shadow: 0px 4px 10px rgb(220, 22, 247);
+  font-weight: $font-weigth;
 }
-.container-fluid{
-    background-color: rgba(255, 253, 251, 0.507);
-
+.container-fluid {
+  background-color: rgba(255, 253, 251, 0.507);
 }
-.pro-c{
-    font-size: $font-size;
-    font-weight: $font-weigth;
-    color: rgb(105, 6, 197);
+.pro-c {
+  font-size: $font-size;
+  font-weight: $font-weigth;
+  color: rgb(105, 6, 197);
 }
-.pro-c:hover{
-    color: rgb(194, 5, 169);
+.pro-c:hover {
+  color: rgb(194, 5, 169);
 }
 /*cambios productos*/
-.nuestrosproductos{
-    font-size: 60px;
-    text-align: $text-aling;
-    background-color: rgb(7, 228, 62);
+.bodyproductos {
+  background: linear-gradient(to top, #58ebf0, #f4f6f7);
 }
-.calzado2{
-    font-size: $font-size;
+
+#opciones {
+    background-color: black;
+  font-size: 30px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-weight: $font-weigth;
+  padding: 15px;
+  ul {
+    list-style: none;
+    text-align: end;
+    display: flex;
+    justify-content: space-around;
+  }
+  li {
+    @include enlaces;
+  }
+  
+}
+.nuestrosproductos {
+  font-size: 60px;
+  text-align: $text-aling;
+  background-color: rgb(7, 228, 62);
+}
+.parrafo {
+  font-size: $font-size;
+  text-align: $text-aling;
+  font-weight: $font-weigth;
+}
+.img-g{
+    margin:auto;
+    display: grid;
+    grid-template-columns: repeat(3,200px);
+    padding: 10px;
+    object-fit: cover;
+    position: relative;
+    @include img(450px,250px,0px);
+     
 }
 /*cambios en contacto*/
 
-input{
-    display: flex;
-    text-align: start;
+input {
+  display: flex;
+  text-align: start;
 }
-.img{
-    width: 100%;
-    height: 500px;
-    }
-.redes{
-    height: 150px;
-    width: 150px;
-    display: flex;
-    display: inline;
-    padding: 120px;
-    margin-bottom: -75px;
-    margin-top: -75px;
-    margin-left: 50px;
-    
+.img {
+  width: 100%;
+  height: 500px;
 }
-.contacto1{
-    width: 100%;
+.redes {
+  height: 150px;
+  width: 150px;
+  display: flex;
+  display: inline;
+  padding: 120px;
+  margin-bottom: -75px;
+  margin-top: -75px;
+  margin-left: 50px;
 }
-.contactanos{
-    text-align: $text-aling;
-    font-size: 50px;
-    font-weight: $font-weigth;
+.contacto1 {
+  width: 100%;
 }
-.datos{
-    display: flex;
-    width: 200px;
-    height: 20px;
+.contactanos {
+  text-align: $text-aling;
+  font-size: 50px;
+  font-weight: $font-weigth;
 }
-.copycontacto{
-    text-align: start;
+.datos {
+  display: flex;
+  width: 200px;
+  height: 20px;
 }
-textarea{
-    width: 350px;
-    height: 150px;
-    border-radius: 15px;
-    border-style:ridge;
-    border-color: blueviolet;
-    padding: 15px;
-    margin: 7px;
-    border-style: solid;   
-    display: flex;
+.copycontacto {
+  text-align: start;
+}
+textarea {
+  width: 350px;
+  height: 150px;
+  border-radius: 15px;
+  border-style: ridge;
+  border-color: blueviolet;
+  padding: 15px;
+  margin: 7px;
+  border-style: solid;
+  display: flex;
 }
 /*cambios nosotros*/
-.titulo2{
-    font-size: 100px;
-    text-align: $text-aling;
-    background-color: aquamari;
-    font-style: normal;
+.titulo2 {
+  font-size: 100px;
+  text-align: $text-aling;
+  background-color: aquamari;
+  font-style: normal;
 }
-.info{
-    font-size: $font-size;
+.info {
+  font-size: $font-size;
 }
-.subtitulo2{
-    font-size: 50px;
-    text-align: $text-aling;
+.subtitulo2 {
+  font-size: 50px;
+  text-align: $text-aling;
 }
-.text4{
-    text-align: end;
-    margin:-35px;
+.text4 {
+  text-align: end;
+  margin: -35px;
 }
-.text5{
-    text-align: $text-aling;
-    margin: 100px;
+.text5 {
+  text-align: $text-aling;
+  margin: 100px;
 }
 /* cambios faqs*/
-.preguntas{
-    font-size: 100px;
-    text-align:$text-aling;
-    background-color: orange;
+.preguntas {
+  font-size: 100px;
+  text-align: $text-aling;
+  background-color: orange;
 }
-.p{
-    font-size: $font-size;
-    font-weight: $font-weigth;
+.p {
+  font-size: $font-size;
+  font-weight: $font-weigth;
 }
-.p2{
-    font-size: $font-size;
-    font-weight: bolder;
-    margin-left: 300px;
-    margin-right: 300px;
-    margin: top;
+.p2 {
+  font-size: $font-size;
+  font-weight: bolder;
+  margin-left: 300px;
+  margin-right: 300px;
+  margin: top;
 }
-.copyfaq{
-    display: flex;
-    text-align: start;
-}
-
-.preguntas2{
-    width: 50%;
-    height: 30px;
-    display: flex;
+.copyfaq {
+  display: flex;
+  text-align: start;
 }
 
+.preguntas2 {
+  width: 50%;
+  height: 30px;
+  display: flex;
+}
 
 
 
 
 
 
+@media (min-width:720px){
+    #opciones{
+        font-display: initial;
+        li{
+            @include enlaces(
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
-
-
- 
-
-
-
-
-
-
-
-
- 
- 
- 
- 
- 
- 
-
-
+            );
+        }
+    }
+}
