--- a/css/estilos.css
+++ b/css/estilos.css
@@ -123,6 +123,31 @@
 }
 
 /*cambios en contacto*/
+.navbar-cont {
+  background-color: black;
+  font-size: 30px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  padding: 15px;
+}
+.navbar-cont ul {
+  list-style: none;
+  text-align: end;
+  display: flex;
+  justify-content: space-around;
+}
+.navbar-cont li a {
+  text-decoration: none;
+  position: sticky;
+  color: #9930ee;
+  border: #083233 solid;
+  border-radius: 15px;
+  transition: all 2s ease-in-out;
+}
+.navbar-cont li a:hover {
+  color: #58ebf0;
+}
+
 input {
   display: flex;
   text-align: start;
@@ -130,18 +155,18 @@ input {
 
 .img {
   width: 100%;
-  height: 500px;
+  height: 450px;
 }
 
 .redes {
-  height: 150px;
-  width: 150px;
-  display: flex;
   display: inline;
-  padding: 120px;
-  margin-bottom: -75px;
-  margin-top: -75px;
-  margin-left: 50px;
+  object-fit: cover;
+  margin-left: 300px;
+  margin-bottom: 15px;
+  width: 80px;
+  height: 100px;
+  gap: 0px;
+  box-shadow: 0px 5px 7px grey;
 }
 
 .contacto1 {
@@ -167,13 +192,11 @@ input {
 textarea {
   width: 350px;
   height: 150px;
-  border-radius: 15px;
-  border-style: ridge;
-  border-color: blueviolet;
   padding: 15px;
   margin: 7px;
+  border-radius: 15px;
+  border-color: blueviolet;
   border-style: solid;
-  display: flex;
 }
 
 /*cambios nosotros*/
