--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -20,6 +20,11 @@ $font-weigth: bold;
     }
   }
 }
+@mixin border($b-radius,$b-color,$b-style){
+  border-radius: $b-radius;
+  border-color: $b-color;
+  border-style: $b-style;
+}
 
 .bodyprincipal {
   background: linear-gradient(to top, #dbd8d8, #9b077b);
@@ -124,24 +129,39 @@ $font-weigth: bold;
      
 }
 /*cambios en contacto*/
-
+.navbar-cont{
+  background-color: black;
+  font-size: 30px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-weight: $font-weigth;
+  padding: 15px;
+  ul {
+    list-style: none;
+    text-align: end;
+    display: flex;
+    justify-content: space-around;
+  }
+  li{
+    @include enlaces();
+  }
+}
 input {
   display: flex;
   text-align: start;
 }
 .img {
   width: 100%;
-  height: 500px;
+  height: 450px;
 }
 .redes {
-  height: 150px;
-  width: 150px;
-  display: flex;
   display: inline;
-  padding: 120px;
-  margin-bottom: -75px;
-  margin-top: -75px;
-  margin-left: 50px;
+  object-fit: cover;
+  margin-left: 300px;
+  margin-bottom: 15px;
+  @include img(80px,100px,0px);
+  box-shadow: 0px 5px 7px grey;
+   
 }
 .contacto1 {
   width: 100%;
@@ -162,13 +182,9 @@ input {
 textarea {
   width: 350px;
   height: 150px;
-  border-radius: 15px;
-  border-style: ridge;
-  border-color: blueviolet;
   padding: 15px;
   margin: 7px;
-  border-style: solid;
-  display: flex;
+  @include border(15px,blueviolet,solid)
 }
 /*cambios nosotros*/
 .titulo2 {
